Add the missing help texts across all core fields

--- a/Source/Umbraco/Plugin/editor/fields/core.email.html
+++ b/Source/Umbraco/Plugin/editor/fields/core.email.html
@@ -11,6 +11,7 @@
           <label class="control-label" for="multiple">
             <input type="checkbox" id="multiple" ng-model="dialogData.field.multiple" />
             <form-editor-localize key="edit.email.allowMultiple">Allow multiple</form-editor-localize>
+            <small form-editor-localize key="edit.email.allowMultiple.helpText">Tick this box if the users should be allowed to enter multiple email addresses</small>
           </label>
 
           <form-editor-field-mandatory></form-editor-field-mandatory>
