--- a/Source/Umbraco/Plugin/editor/fields/core.heading.html
+++ b/Source/Umbraco/Plugin/editor/fields/core.heading.html
@@ -7,6 +7,7 @@
         <div class="umb-pane">
           <label class="control-label" for="text">
             <form-editor-localize key="edit.text">Text</form-editor-localize>
+            <small form-editor-localize key="edit.header.text.helpText">The text to display in the heading</small>
           </label>
           <input type="text" id="text" autofocus ng-model="dialogData.field.text" />
         </div>
