--- a/Source/Umbraco/Plugin/editor/fields/core.number.html
+++ b/Source/Umbraco/Plugin/editor/fields/core.number.html
@@ -10,11 +10,13 @@
 
           <label class="control-label" for="min">
             <form-editor-localize key="edit.number.minimum">Minimum</form-editor-localize>
+            <small form-editor-localize key="edit.number.minimum.helpText">The minimum number allowed</small>
           </label>
           <input type="number" id="min" ng-model="dialogData.field.min" />
 
           <label class="control-label" for="max">
             <form-editor-localize key="edit.number.maximum">Maximum</form-editor-localize>
+            <small form-editor-localize key="edit.number.maximum.helpText">The maximum number allowed</small>
           </label>
           <input type="number" id="max" ng-model="dialogData.field.max" />
 
