--- a/Source/Umbraco/Plugin/editor/fields/core.submitbutton.html
+++ b/Source/Umbraco/Plugin/editor/fields/core.submitbutton.html
@@ -6,7 +6,8 @@
 
         <div class="umb-pane">
           <label class="control-label" for="text">
-            <form-editor-localize key="edit.submitButton.label">Button label</form-editor-localize>
+            <form-editor-localize key="edit.submitButton.label">Button text</form-editor-localize>
+            <small form-editor-localize key="edit.submitButton.label.helpText">The text displayed on the button - e.g. "Save" or "Send"</small>
           </label>
           <input type="text" id="text" autofocus ng-model="dialogData.field.text" />
         </div>
