--- a/Source/Umbraco/Plugin/editor/fields/core.checkbox.html
+++ b/Source/Umbraco/Plugin/editor/fields/core.checkbox.html
@@ -10,6 +10,7 @@
           <label class="control-label" for="selected">
             <input type="checkbox" id="selected" ng-model="dialogData.field.selected" />
             <form-editor-localize key="edit.checked">Checked</form-editor-localize>
+            <small form-editor-localize key="edit.checkbox.checked.helpText">Tick this box if the field should be checked by default</small>
           </label>
 
           <form-editor-field-mandatory></form-editor-field-mandatory>
