--- a/Source/Umbraco/Plugin/editor/fields/core.textParagraph.html
+++ b/Source/Umbraco/Plugin/editor/fields/core.textParagraph.html
@@ -7,6 +7,7 @@
         <div class="umb-pane">
           <label class="control-label" for="text">
             <form-editor-localize key="edit.text">Text</form-editor-localize>
+            <small form-editor-localize key="edit.textParagraph.text.helpText">The text to display in the text paragraph</small>
           </label>
           <textarea id="text" ng-model="dialogData.field.text" style="width:320px;height:350px;"></textarea>
         </div>
