--- a/Source/Umbraco/Plugin/editor/fields/core.memberinfo.html
+++ b/Source/Umbraco/Plugin/editor/fields/core.memberinfo.html
@@ -6,6 +6,12 @@
 
         <div class="umb-pane">
           <form-editor-field-name></form-editor-field-name>
+          <div class="infoBox">
+            <i class="icon icon-info"></i>
+            <div class="infoText" form-editor-localize key="edit.memberInfo.helpText">
+              When this field is added to your form, the names and emails of logged in members will automatically be stored.
+            </div>
+          </div>
         </div>
       </div>
     </div>
