--- a/Source/Umbraco/Plugin/editor/form.html
+++ b/Source/Umbraco/Plugin/editor/form.html
@@ -241,7 +241,7 @@
     </p>
     <label class="control-label" form-editor-localize key="receipt.page">Receipt page</label>
     <div class="controls controls-row">
-      <ul class="unstyled list-icons success-page">
+      <ul class="unstyled list-icons page-selector">
         <li ng-show="model.successPage == null">
           <i class="icon icon-add blue" />
           <a href ng-click="pickSuccessPage()" form-editor-localize key="receipt.page.select">Select...</a>
