--- a/Source/Umbraco/Plugin/editor/data.html
+++ b/Source/Umbraco/Plugin/editor/data.html
@@ -1,7 +1,4 @@
 <div class="umb-editor umb-listview form-editor-data" ng-controller="FormEditor.Editor.DataController" ng-switch="dataState">
-  <!-- TODO: move this elsewhere - use assetsService perhaps? -->
-  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-
   <p form-editor-localize="" key="data.text">
     The submissions for your form are listed in the table below.
   </p>
@@ -186,19 +183,18 @@
     </div>
   </script>
 
-<script type="text/ng-template" id="data.fieldValueFrequenyStatistics.html">
+  <script type="text/ng-template" id="data.fieldValueFrequenyStatistics.html">
     <div class="umb-panel">
       <div class="umb-panel-body no-header with-footer umb-scrollable">
         <div class="umb-control-group">
           <div class="tab-content form umb-el-wrap">
-            <div class="umb-pane">
+            <div class="umb-pane" ng-controller="FormEditor.Editor.FieldValueFrequenyStatisticsController">
               <h4 form-editor-localize key="data.fieldValueFrequenyStatistics.header" default-value="Statistics" />
-              <div ng-controller="FormEditor.Editor.FieldValueFrequenyStatisticsController">
-                <div ng-repeat="field in fields">
-                  <h5>{{field.name}}</h5>
-                  <div id="{{field.formSafeName}}" style="height: 320px; background-color:red;">
-                    <span ng-if="loading">Loading...</span>
-                  </div>
+              <div ng-if="fields == null">Loading statistics...</div>
+              <div ng-repeat="field in fields">
+                <h5>{{field.name}}</h5>
+                <div id="{{field.formSafeName}}" style="height: 320px;">
+                  <div ng-show="loading" style="vertical-align: middle; text-align: center; line-height: 320px;">Loading graph...</div>
                 </div>
               </div>
             </div>
