Some modifications toward workflow support

--- a/Source/Umbraco/Plugin/editor/form.html
+++ b/Source/Umbraco/Plugin/editor/form.html
@@ -30,6 +30,12 @@
         <form-editor-localize key="data.header">Submissions</form-editor-localize>
       </a>
     </li>
+    <li>
+      <a href="#tabFormEditorWorkflow" data-toggle="tab" class="ng-binding">
+        <i class="icon icon-list"></i>
+        <form-editor-localize key="data.header">Workflow</form-editor-localize>
+      </a>
+    </li>
   </ul>
 
   <!-- ## layout ## -->
@@ -331,6 +337,10 @@
       <textarea class="umb-editor" id="maxSubmissionsForCurrentUserExceededText" ng-model="model.value.maxSubmissionsForCurrentUserExceededText" rows="5"></textarea>
     </div>
   </div>
+
+    <div id="tabFormEditorWorkflow" class="tab-pane">
+
+    </div>
 </div>
 
 <script type="text/ng-template" id="formEditor.compositionPicker.html">
